Fix ▀ alignments;

--- a/app/common/components/game-task/game-task.styl
+++ b/app/common/components/game-task/game-task.styl
@@ -2,9 +2,9 @@
     display flex
 
     .code-box:nth-child(1)
-        flex-grow 3
+        flex 3 1 66%
     .code-box:nth-child(3)
-        flex-grow 2
+        flex 2 1 34%
 
     .separator
         width 1vw
