--- a/app/game/components/game-input/game-input.styl
+++ b/app/game/components/game-input/game-input.styl
@@ -2,9 +2,9 @@
     display flex
 
     .code-editor
-        flex-grow 3
+        flex 3 1 66%
     .code-box
-        flex-grow 2
+        flex 2 1 34%
 
     .separator
         width 1vw
